--- a/src/index.css
+++ b/src/index.css
@@ -1,69 +1,64 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  --mainRed: #990000;
+  font-size: 16px;
+  --backgroundImage: url("./assets/backgrounds/background.svg");
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+::-webkit-scrollbar {
+  width: 1em;
 }
-a:hover {
-  color: #535bf2;
+
+::-webkit-scrollbar-track {
+  background-color: #ffffff;
+  border-radius: 100vw;
+  margin-block: 0.125rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--mainRed);
+  border-radius: 100vw;
+  border: 0.125em solid #ffffff;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #bb0000;
+}
+
+@font-face {
+  font-family: "candela";
+  src: url("./assets/font/CandelaBook-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "candela";
+  src: url("./assets/font/CandelaBold-webfont.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "candela";
+  src: url("./assets/font/CandelaBoldItalic-webfont.woff") format("woff");
+  font-weight: bold;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "candela";
+  src: url("./assets/font/CandelaItalic-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: italic;
 }
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  font-family: "candela";
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+code {
+  font-family: "candela";
 }
