--- a/src/pages/Courses/Courses.css
+++ b/src/pages/Courses/Courses.css
@@ -15,3 +15,30 @@
 .CoursesTitle {
   font-size: 3rem;
 }
+
+.CoursesHolder {
+  display: flex;
+  flex: 1;
+  width: 100%;
+  padding-bottom: 5rem;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th,
+td {
+  border: 1px solid #ffffff;
+  padding: 1rem;
+  text-align: left;
+}
+
+th {
+  background-color: #3a3a3a;
+}
+
+tbody {
+  background-color: #646464;
+}
